--- a/Left/Base.lproj/Main.storyboard
+++ b/Left/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--Search-->
@@ -282,10 +283,6 @@
                                     <rect key="frame" x="0.0" y="0.0" width="567" height="104.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UbP-mE-0pn">
-                                            <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
-                                            <accessibility key="accessibilityConfiguration" identifier="recipeImg"/>
-                                        </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="mLW-Uo-yxX">
                                             <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                                             <accessibility key="accessibilityConfiguration" identifier="recipeName"/>
@@ -293,41 +290,51 @@
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="right" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="UbP-mE-0pn">
+                                            <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                            <accessibility key="accessibilityConfiguration" identifier="recipeImg"/>
+                                            <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
+                                        </imageView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="UbP-mE-0pn" firstAttribute="leading" secondItem="mLW-Uo-yxX" secondAttribute="trailing" constant="72" id="44j-MQ-jb3"/>
-                                        <constraint firstItem="mLW-Uo-yxX" firstAttribute="leading" secondItem="sd7-mD-H3m" secondAttribute="leadingMargin" constant="25" id="CBy-cJ-goi"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="UbP-mE-0pn" secondAttribute="trailing" id="GIe-Kt-Pj2"/>
-                                        <constraint firstItem="UbP-mE-0pn" firstAttribute="centerY" secondItem="sd7-mD-H3m" secondAttribute="centerY" id="f8x-Ow-iGo"/>
-                                        <constraint firstItem="mLW-Uo-yxX" firstAttribute="centerY" secondItem="sd7-mD-H3m" secondAttribute="centerY" id="jwG-38-rpw"/>
-                                        <constraint firstItem="UbP-mE-0pn" firstAttribute="top" secondItem="sd7-mD-H3m" secondAttribute="topMargin" constant="-3" id="rOb-IZ-Q9o"/>
+                                        <constraint firstItem="UbP-mE-0pn" firstAttribute="height" secondItem="sd7-mD-H3m" secondAttribute="height" multiplier="0.9" id="5Ky-fH-vSA"/>
+                                        <constraint firstAttribute="leadingMargin" secondItem="mLW-Uo-yxX" secondAttribute="leading" id="E9F-mn-sC0">
+                                            <variation key="widthClass=compact" constant="-4"/>
+                                        </constraint>
+                                        <constraint firstItem="mLW-Uo-yxX" firstAttribute="centerY" secondItem="sd7-mD-H3m" secondAttribute="centerY" id="SyU-qd-zus"/>
+                                        <constraint firstItem="UbP-mE-0pn" firstAttribute="centerY" secondItem="sd7-mD-H3m" secondAttribute="centerY" id="eVn-7b-ibO"/>
+                                        <constraint firstItem="UbP-mE-0pn" firstAttribute="width" secondItem="sd7-mD-H3m" secondAttribute="width" multiplier="0.55" id="jYi-7a-ddC"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="UbP-mE-0pn" secondAttribute="trailing" id="mdx-94-9Hv"/>
+                                        <constraint firstItem="mLW-Uo-yxX" firstAttribute="width" secondItem="sd7-mD-H3m" secondAttribute="width" multiplier="0.4" id="zP0-vw-BCU"/>
                                     </constraints>
                                     <variation key="default">
                                         <mask key="subviews">
-                                            <exclude reference="UbP-mE-0pn"/>
                                             <exclude reference="mLW-Uo-yxX"/>
+                                            <exclude reference="UbP-mE-0pn"/>
                                         </mask>
                                         <mask key="constraints">
-                                            <exclude reference="CBy-cJ-goi"/>
-                                            <exclude reference="jwG-38-rpw"/>
-                                            <exclude reference="44j-MQ-jb3"/>
-                                            <exclude reference="GIe-Kt-Pj2"/>
-                                            <exclude reference="f8x-Ow-iGo"/>
-                                            <exclude reference="rOb-IZ-Q9o"/>
+                                            <exclude reference="E9F-mn-sC0"/>
+                                            <exclude reference="SyU-qd-zus"/>
+                                            <exclude reference="zP0-vw-BCU"/>
+                                            <exclude reference="5Ky-fH-vSA"/>
+                                            <exclude reference="eVn-7b-ibO"/>
+                                            <exclude reference="jYi-7a-ddC"/>
+                                            <exclude reference="mdx-94-9Hv"/>
                                         </mask>
                                     </variation>
                                     <variation key="widthClass=compact">
                                         <mask key="subviews">
-                                            <include reference="UbP-mE-0pn"/>
                                             <include reference="mLW-Uo-yxX"/>
+                                            <include reference="UbP-mE-0pn"/>
                                         </mask>
                                         <mask key="constraints">
-                                            <include reference="CBy-cJ-goi"/>
-                                            <include reference="jwG-38-rpw"/>
-                                            <include reference="44j-MQ-jb3"/>
-                                            <include reference="GIe-Kt-Pj2"/>
-                                            <include reference="f8x-Ow-iGo"/>
-                                            <include reference="rOb-IZ-Q9o"/>
+                                            <include reference="E9F-mn-sC0"/>
+                                            <include reference="SyU-qd-zus"/>
+                                            <include reference="zP0-vw-BCU"/>
+                                            <include reference="5Ky-fH-vSA"/>
+                                            <include reference="eVn-7b-ibO"/>
+                                            <include reference="jYi-7a-ddC"/>
+                                            <include reference="mdx-94-9Hv"/>
                                         </mask>
                                     </variation>
                                 </tableViewCellContentView>
