--- a/Left/Base.lproj/Main.storyboard
+++ b/Left/Base.lproj/Main.storyboard
@@ -301,7 +301,11 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="activityIndicator" destination="Vs1-fK-X1W" id="OlG-gX-YVP"/>
+                        <outlet property="ingredient1" destination="vAg-aZ-aon" id="eOA-Ud-gni"/>
                         <outlet property="ingredient2" destination="dul-bJ-R7s" id="n6I-oq-0yy"/>
+                        <outlet property="ingredient3" destination="efG-PO-wYd" id="zig-i1-5bi"/>
+                        <outlet property="ingredient4" destination="0QO-6k-Zvb" id="5aC-LZ-5To"/>
+                        <outlet property="ingredient5" destination="Pgz-Ko-7jc" id="tuq-tx-kzw"/>
                         <segue destination="pEd-RP-jZV" kind="show" identifier="resultsSegue" id="aab-Zf-21w"/>
                     </connections>
                 </viewController>
